Update
Updated repository URL and added setup instructions for Java JDK and JavaFX SDK.